// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App component > Render home page 1`] = `
<div>
  <div>
    <header
      class="_header_812fc8"
    >
      <h1>
        WAXDISC
      </h1>
      <nav
        class="_navbar_812fc8"
      >
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/cart"
            >
              Cart
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <p>
      Loading...
    </p>
  </div>
</div>
`;

exports[`App component > Visit cart page 1`] = `
<div>
  <div>
    <header
      class="_header_812fc8"
    >
      <h1>
        WAXDISC
      </h1>
      <nav
        class="_navbar_812fc8"
      >
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/cart"
            >
              Cart
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <div
      class="_cartContainer_7e8544"
    >
      <h2>
        Your Cart
      </h2>
      <p>
        Your cart is empty
      </p>
    </div>
  </div>
</div>
`;

exports[`App component > Visit home page 1`] = `
<div>
  <div>
    <header
      class="_header_812fc8"
    >
      <h1>
        WAXDISC
      </h1>
      <nav
        class="_navbar_812fc8"
      >
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/cart"
            >
              Cart
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <p>
      Loading...
    </p>
  </div>
</div>
`;

exports[`App component > Visit non-existent page 1`] = `
<div>
  <p>
    I think you might be lost 🧐
  </p>
</div>
`;

exports[`App component > Visit shop page 1`] = `
<div>
  <div>
    <header
      class="_header_812fc8"
    >
      <h1>
        WAXDISC
      </h1>
      <nav
        class="_navbar_812fc8"
      >
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/cart"
            >
              Cart
            </a>
          </li>
        </ul>
      </nav>
    </header>
    <p>
      Loading...
    </p>
  </div>
</div>
`;
